ARTEMIS-3420: require Java 11+, resolve some issues from doing so and tidy up some stale bits as a result